# Qt-Android-Template

./: .gitmodules  CMakeLists.txt  README.rst  androidqmltemplate.pro  qml.qrc  qt-android-template.pro  translations.qrc
android/: AndroidManifest.xml
android/src/com/github/stemoretti/androidqmltemplate/: MainActivity.java
qml/: InfoPage.qml  MainPage.qml  SettingsPage.qml  main.qml
qml/common/: App.qml  AppStackPage.qml  AppToolBar.qml  ButtonFlat.qml  HorizontalDivider.qml  LabelBody.qml  LabelSubheading.qml  LabelTitle.qml  SettingsItem.qml
qml/ekke/popups/: PopupError.qml
qml/pages/: AboutPage.qml  HomePage.qml  SettingsContinentsPage.qml  SettingsCountriesPage.qml  SettingsPage.qml  SpeechRecognitionPage.qml
qml/popups/: BaseModalPopup.qml  ColorSelectionPopup.qml  DatePicker.qml  ListPopup.qml  TimePicker.qml
src/: appdata.cpp  appdata.h  globalsettings.cpp  globalsettings.h  iconprovider.cpp  iconprovider.h  main.cpp  qml.qrc  settings.cpp  settings.h  system.cpp  system.h
src/qml/: AboutPage.qml  AppStackPage.qml  BaseModalPopup.qml  ButtonFlat.qml  ColorSelectionPopup.qml  HomePage.qml  HorizontalDivider.qml  LabelBody.qml  LabelSubheading.qml  LabelTitle.qml  ListPopup.qml  SettingsItem.qml  SettingsPage.qml  Style.qml  main.qml
translations/: androidqmltemplate_it.ts  qt-android-template_it.ts
